--- a/templates/shop/item_detail.html
+++ b/templates/shop/item_detail.html
@@ -123,10 +123,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="d-none d-lg-block remove-outline swiper-button-prev">
+                    <div class="d-none d-lg-flex justify-content-start align-items-center remove-outline swiper-button-prev">
                         <i class="fas text-black-50 fa-2x fa-angle-left"></i>
                     </div>
-                    <div class="d-none d-lg-block remove-outline swiper-button-next">
+                    <div class="d-none d-lg-flex justify-content-end align-items-center remove-outline swiper-button-next">
                         <i class="fas text-black-50 fa-2x fa-angle-right"></i>
                     </div>
                     <div class="swiper-pagination swiper-pagination-bullets"></div>
