--- a/templates/tags/_menu.html
+++ b/templates/tags/_menu.html
@@ -14,16 +14,15 @@
     {% endif %}
 </li>
 {% else %}
-<li class="px-lg-1 {% if node.slug in request.path %}active {% endif %}d-none d-lg-block border-0 list-group-item bg-transparent">
-    {% if not node.is_leaf_node %}
-    <a href="{{ node|form_url }}" class="d-inline-block text-capitalize">{{ node.name }}</a>
-    {% comment %} <button class="py-0 mx-3 btn btn-secondary data-toggle menu-data-toggle bg-transparent" type="button" id="submenu" data-toggle="collapse" role="button" aria-haspopup="true" aria-expanded="false" data-target="#{{ node.name }}Submenu" aria-controls="{{ node.name }}Submenu" data-toggle="collapse"><i class="fas fa-xs fa-plus text-white-50"></i></button> {% endcomment %}
-    <ul class="p-1 collapse position-absolute bg-warning list-unstyled p-0 list-group" id="{{ node.name }}Submenu" style="width:150%">
+{% if not node.is_leaf_node %}
+<div class="d-flex flex-column">
+    <a href="{{ node|form_url }}" class="text-capitalize text-center">{{ node.name }}</a>
+    <div class="p-1 bg-transparent p-0 d-flex flex-column align-items-center my-4">
         {{ children }}
-    </ul>
-    {% else %}
-    <a href="{{ node|form_url }}" class="text-capitalize">{{ node.name }}</a>
-    {% endif %}
-</li>
+    </div>
+</div>
+{% else %}
+<a href="{{ node|form_url }}" class="text-capitalize text-center my-3">{{ node.name }}</a>
+{% endif %}
 {% endif %}
 {% endrecursetree %}
